# setuptools_skeleton

./: .gitignore  .testr.conf  .travis.yml  MANIFEST.in  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
skeleton/: config.py
tools/: rename.sh
