[metadata]
name = skeleton
summary = summary of this program
description-file =
    README.rst
author = John Doe
author-email = john@doe.net
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    skeleton

[entry_points]
console_scripts =
    skeleton = skeleton.main:main

oslo.config.opts =
    skeleton = skeleton.config:list_opts
